# TSP_BNB_OMP

./: CMakeLists.txt  TSPFileParser.cpp  TSPFileParser.h  TSPSolution.h  TSP_BNB_OMP.cpp  TSP_BNB_OMP.h
tsplib/: gr10.tsp  gr8.tsp
